# LinEqSolver

./: .gitignore  CMakeLists.txt  main.cpp
headers/: Equation.h  Equations_System.h  Img_To_Txt.h  Variable.h
src/: Equation.cpp  Equations_System.cpp  Img_To_Txt.cpp  Variable.cpp
test_img/: .directory
